--- a/compose/production/traefik/traefik.yml
+++ b/compose/production/traefik/traefik.yml
@@ -30,8 +30,8 @@ certificatesResolvers:
 
 http:
   routers:
-    web-secure-router:
-      rule: 'Host(`example.com`) || Host(`www.example.com`)'
+    api-secure-router:
+      rule: 'Host(`example.com`) && PathPrefix(`/api/`) || Host(`www.example.com`) && PathPrefix(`/api/`)'
       entryPoints:
         - web-secure
       middlewares:
@@ -39,6 +39,24 @@ http:
       service: django
       tls:
         # https://docs.traefik.io/master/routing/routers/#certresolver
+        certResolver: letsencrypt
+
+    admin-secure-router:
+      rule: 'Host(`example.com`) && PathPrefix(`/admin/`) || Host(`www.example.com`) && PathPrefix(`/admin/`)'
+      entryPoints:
+        - web-secure
+      middlewares:
+        - csrf
+      service: django
+      tls:
+        certResolver: letsencrypt
+
+    frontend-secure-router:
+      rule: 'Host(`example.com`) || Host(`www.example.com`)'
+      entryPoints:
+        - web-secure
+      service: frontend
+      tls:
         certResolver: letsencrypt
 
     flower-secure-router:
@@ -62,6 +80,11 @@ http:
       loadBalancer:
         servers:
           - url: http://django:5000
+
+    frontend:
+      loadBalancer:
+        servers:
+          - url: http://frontend:80
 
     flower:
       loadBalancer:
