usrl shortner works

--- a/backend/env.example
+++ b/backend/env.example
@@ -8,17 +8,16 @@ DJANGO_SETTINGS_MODULE=config.settings.local
 DATABASE_URL=sqlite:///db.sqlite3
 
 # Celery
-REDIS_URL=redis://redis:6379/0
-CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_BROKER_URL=redis://localhost:6379/0
 
 # Email (for development)
 DJANGO_EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
 
 # Frontend URL for generating short URLs
-FRONTEND_BASE_URL=http://localhost:8000
+FRONTEND_BASE_URL=http://localhost:8001
 
 # CORS settings
 DJANGO_ACCOUNT_ALLOW_REGISTRATION=True
 
 # Docker settings
-USE_DOCKER=yes
+USE_DOCKER=no
