--- a/local.yml
+++ b/local.yml
@@ -21,7 +21,7 @@ services:
       - ./.envs/.local/.postgres
     ports:
       - '8000:8000'
-    command: /start
+    command: python backend/manage.py runserver 0.0.0.0:8000
 
   postgres:
     build:
